--- a/BuildingQiO.tex
+++ b/BuildingQiO.tex
@@ -11,7 +11,7 @@ In this section we provide definitions of equivalent quantum circuits and  Quant
 \subsection{Definitions}
 \label{def:equivalent-circuits}
 \begin{definition} {\rm (Equivalent Quantum Circuits):}
-Let $C_{q_0}$ and $C_{q_1}$ be two $n$-qubit quantum circuits. We say $C_{q_0}$ and $C_{q_1}$ are equivalent if for every $n$-qubit state $\ket{\psi}$
+Let $C_{q_0}$ and $C_{q_1}$ be two $n$-qubit quantum circuits. We say $C_{q_0}$ and $C_{q_1}$ are \emph{equivalent} if for every $n$-qubit state $\ket{\psi}$
 $$C_{q_1}(\ket{\psi}) =C_{q_2}(\ket{\psi}).$$
 \end{definition}
 %\anote{Need some blah blah before an important definition to describe what it is saying, but in words}
@@ -19,7 +19,8 @@ $$C_{q_1}(\ket{\psi}) =C_{q_2}(\ket{\psi}).$$
 %\anote{why is computational in brackets below?}
 \begin{definition}{\rm (Quantum Indistinguishability Obfuscation)}
 \label{def:QiO}
-A  polynomial-time quantum algorithm for a class of quantum circuits $\mathcal{C}_Q$ is a quantum computational indistinguishability obfuscator $Qi\mathcal{O}$  if the following conditions hold:
+A  polynomial-time quantum algorithm for a class of quantum circuits $\mathcal{C}_Q$ is a \emph{quantum computational indistinguishability obfuscator} ($Qi\mathcal{O}$)  if the following conditions hold:
+\Anne{as already noted, I am wondering if we should use a pure state $\ket{\phi}$ instead of a mixed state $\rho$, mostly because $ C_q^\prime(\rho,\ket{\phi})$ is funny notation. }
 
 \begin{enumerate}
 \item {\tt Functionality:}  For every $C_q\in \mathcal{C}_Q$ and every quantum state $\ket{\phi},$
@@ -49,8 +50,9 @@ Where $k=|C_{q_1}|=|C_{q_2}|.$
 
 \subsubsection{$Qi\mathcal{O}$ for Clifford Circuits via Canonical Form}
 \label{sec:Clifford-iO-canonical}
-Aaronson and Gottesman invented a polynomial-time quantum algorithm (polynomial size circuit) that takes a Clifford circuit $C_q$ and outputs its canonical form (see ~\cite{AG04} section VI). This canonical form is invariant for any two equivalent circuits. Moreover the size of the canonical form remains polynomial in the size of the input circuit. 
-\begin{algorithm}[H]
+\Anne{what happened to all the subtlelties we had to fix in Aaronson-Gottesman?}
+Aaronson and Gottesman invented a polynomial-time quantum algorithm (polynomial size circuit) that takes a Clifford circuit $C_q$ and outputs its canonical form (see~\cite{AG04}, section~VI). This canonical form is invariant for any two equivalent circuits. Moreover the size of the canonical form remains polynomial in the size of the input circuit.
+\begin{algorithm}[]
 \label{QiO:Canonical-Clifford}
    \caption{$Qi\mathcal{O}$-Canonical}
   \begin{itemize}
@@ -61,7 +63,7 @@ Aaronson and Gottesman invented a polynomial-time quantum algorithm (polynomial 
  		 C_q^\prime \xleftarrow{\mbox{canonical form}}C_q
  		 \end{equation*}
   \item Let $\rho$ be an empty register.
-  \item Output $\left(\rho,C_q^\prime \right).$\footnote{Note we output the empty register to satisfy the definition of quantum indistinguishability obfuscation (\ref{def:QiO}).}
+  \item Output $\left(\rho,C_q^\prime \right)$. 
   \end{enumerate}
   \end{itemize}
 \end{algorithm}
@@ -69,25 +71,25 @@ Aaronson and Gottesman invented a polynomial-time quantum algorithm (polynomial 
 
 
  \begin{lemma}
-The  construction $Qi\mathcal{O}$-Canonical  \ref{QiO:Canonical-Clifford} is a Quantum Indistinguishability Obfuscation for all Clifford Circuits.
+\Cref{QiO:Canonical-Clifford} is a Quantum Indistinguishability Obfuscation for all Clifford Circuits.
 \end{lemma}
 
-\noindent {\bf Proof}: We have to show that the construction \ref{QiO:Canonical-Clifford} satisfies the definition of quantum indistinguishability obfuscation \ref{def:QiO}. Note that the construction is essentially the Aaronson and Gottesman  algorithm~\cite{AG04}. Therefore, it runs in polynomial-time. 
+\noindent {\bf Proof}: We have to show that \Cref{QiO:Canonical-Clifford} satisfies the definition of quantum indistinguishability obfuscation \ref{def:QiO}. Note that the construction is essentially the Aaronson and Gottesman  algorithm~\cite{AG04}. Therefore, it runs in polynomial-time.
 Since,  $C_q^\prime$ is the canonical form of $C_q,$ they have the same functionality. Note $\rho$ is an empty register and the size of $|C_q^\prime| \in poly(|C_q|)$ ~\cite{AG04}, therefore the construction is efficient (polynomial slowdown). Finally note the canonical form reveals no information about the input circuit $C_q$ excepts its functionality, therefore this $Qi\mathcal{O}$ is perfectly indistinguishable against any quantum adversary. Hence, computationally indistinguishable against any quantum adversary.
 
 
 
-\subsubsection{$Qi\mathcal{O}$ for Clifford via Gate Teleportation}
+\subsubsection{$Qi\mathcal{O}$ for Clifford Circuits via Gate Teleportation}
 \label{sec:Clifford-iO-teleportaion}
-In this section we  show how gate teleportation (section \ref{protocol: gate-teleportation}) can be used to construct a quantum indistinguishability obfuscation for Clifford circuits. Our algorithm relies on the assumption that there exists a quantum secure $i\mathcal{O}$ for classical circuits, this seems problematic at first, since there is no provably quantum secure $i\mathcal{O}$ known for general classical circuits.
+In this section, we  show how gate teleportation (\Cref{protocol: gate-teleportation}) can be used to construct a quantum indistinguishability obfuscation for Clifford circuits. Our algorithm (see \Cref{QiO:Clifford-teleportation}) relies on the assumption that there exists a quantum secure $i\mathcal{O}$ for classical circuits; this seems problematic at first, since there is no provably quantum secure $i\mathcal{O}$ known for general classical circuits.
 %\anote{Really? I thought there were some candidates.... }
-However,  our construction relies on the assumption that a quantum secure $i\mathcal{O}$ exists for a very specific class of boolean circuits.\footnote{Circuits that compute update functions for Clifford circuits section \ref{update function}}.  And in fact, it is easy to construct an $i\mathcal{O}$ for this class of circuits (see appendix \ref{sec: iO-clifford-functions}). %section \ref{sec: iO-clifford-functions}). %\anote{Indeed, we're looking at some classical circuits that are probably quite easy to deal with. I'm not sure they are Cliffords, however, since I think they are classical functions.}
+However,  our construction relies on the assumption that a quantum secure $i\mathcal{O}$ exists for a very specific class of boolean circuits.\footnote{Circuits that compute update functions for Clifford circuits, see \Cref{update function}}.  And in fact, it is easy to construct an $i\mathcal{O}$ for this class of circuits (see appendix \ref{sec: iO-clifford-functions}). %section \ref{sec: iO-clifford-functions}). %\anote{Indeed, we're looking at some classical circuits that are probably quite easy to deal with. I'm not sure they are Cliffords, however, since I think they are classical functions.}
 
 
 %\anote{below, $\rho$ is usually a density matrix, which does not require a $\ket{\cdot}$.}
 %\anote{below, say something about what ``lower half'' means, or establish earlier on that another way to write the tensor product of $n$ Bell states is $\sum_i \ket{i}{i}$ (or something like this; need to check). Then it is clear which register we are talking about for applying $C_q$.}
 
-\begin{algorithm}[H]
+\begin{algorithm}[]
 \label{QiO:Clifford-teleportation}
    \caption{$Qi\mathcal{O}$ from Gate Teleportation}
   \begin{itemize}
@@ -98,7 +100,7 @@ However,  our construction relies on the assumption that a quantum secure $i\mat
   										 $$\rho=(\igate_n\otimes C_q) \ket{\beta^{2n}}.$$
  \item Compute the classical circuit $C$ that computes the update function $F_{C_q}.$	
  \item  Set $C^\prime\leftarrow i\mathcal{O}(C).$							
-  \item Let $B_q$ denote the circuit that takes a $2n$ qubit state as an input and perform a Bell measurement on it.
+  \item Let $B_q$ denote the circuit that takes a $2n$ qubit state as  input and perform a Bell measurement on it.
   \item Set $C_q^\prime=(B_q, C^\prime).$
   \item Output $\left(\rho,C_q^\prime \right).$
   \end{enumerate}
@@ -114,7 +116,7 @@ However,  our construction relies on the assumption that a quantum secure $i\mat
  \begin{itemize}
   \item Input $\left(\rho,C_q^\prime \right)$ and a quantum state $\ket{\psi}.$
   \begin{enumerate}
-  \item   Write $C_q^\prime=(B_q, C^\prime)$ and the joint system 
+  \item   Write $C_q^\prime=(B_q, C^\prime)$ and the joint system
   \begin{equation*}
   \label{eq1:GT:Clifford}
   \rho_{AB}=\rho \otimes \ket{\psi}.
@@ -139,19 +141,17 @@ However,  our construction relies on the assumption that a quantum secure $i\mat
 If $i\mathcal{O}$ is a Quantum Secure Classical Indistinguishability Obfuscation, then construction  \ref{sec:Clifford-iO-teleportaion} is a Quantum Indistinguishability Obfuscation for all Clifford Circuits.
 \end{theorem}
 
-\anote{Note to self: I have not checked the below}
-
-\noindent{\bf Proof}: We have to show that the construction  \ref{sec:Clifford-iO-teleportaion} satisfies the definition of $Qi\mathcal{O}$(section  \ref{def:QiO}).
+\noindent{\bf Proof}: We have to show that \cref{QiO:Clifford-teleportation} satisfies the definition of $Qi\mathcal{O}$ (\Cref{def:QiO}).
 \begin{itemize}
-\item  {\tt Functionality:} The functionality of the construction is followed from the gate teleportation (section \ref{protocol: gate-teleportation}).
-\item {\tt Polynomial Slowdown:} Note $\rho$ is a $O(n)$ qubit state and the size $|C_q^\prime|=|B_q|+|C^\prime|.$ The circuit $B_q$ performs the Bell measurement of a $O(n)$ qubit system. Therefore, $B_q$ can be constructed with $O(|C_q|)$ gates and since $C^\prime\leftarrow i\mathcal{O}(C),$ the $i\mathcal{O}$ guarantees that $|C^\prime|\in poly(|C|).$ So all we have to show is that $|C|\in poly(|C_q|).$  Let $g_{|C_q|},\ldots, g_2,g_1$ be a topological ordering of the gates in $C_q.$ For each gate $g_i$ in $C_q$ the classical circuit $C$ has to implement one of the following operations (section \ref{update function}): 
+\item  {\tt Functionality:} The functionality of the construction  follows from the gate teleportation (\Cref{protocol: gate-teleportation}).
+\item {\tt Polynomial Slowdown:} Note $\rho$ is a $O(n)$ qubit state and the size $|C_q^\prime|=|B_q|+|C^\prime|.$ The circuit $B_q$ performs the Bell measurement of a $O(n)$ qubit system. Therefore, $B_q$ can be constructed with $O(|C_q|)$ gates and since $C^\prime\leftarrow i\mathcal{O}(C),$ the $i\mathcal{O}$ guarantees that $|C^\prime|\in poly(|C|).$ So all we have to show is that $|C|\in poly(|C_q|).$  Let $g_{|C_q|},\ldots, g_2,g_1$ be a topological ordering of the gates in $C_q.$ For each gate $g_i$ in $C_q$ the classical circuit $C$ has to implement one of the following operations (section \ref{update function}):
  \begin{itemize}
- \item[] $(a,b)\xrightarrow{\xgate, \zgate}(a,b).$  
+ \item[] $(a,b)\xrightarrow{\xgate, \zgate}(a,b).$
  \item[]  $(a,b)\xrightarrow{\hgate}(b,a)$         (one swap).
  \item[]  $(a,b)\xrightarrow{\pgate}(a,a\oplus b)$      (one $\oplus$ operation).
  \item[]  $(a_1,b_1,a_2,b_2)\xrightarrow{\mbox{\cnot}}(a_1\oplus a_2,b_1,a_2, b_1\oplus b_2)$ (two $\oplus$ operations).
  \end{itemize}
- Each of these operations can be implemented by a constant number of gates. Therefore, the size of $C\in O(|C_q|),$ hence we have
+ Each of these operations can be implemented by a constant number of gates. Therefore, the size of $C\in O(|C_q|),$ hence we have \Anne{funny wording, Raza please check}
 \begin{equation*}
 \rho\in poly(|C_q|)    \mbox{ and } |C_q^\prime |=|B_q|+|C| \in poly(|C_q|).
 \end{equation*}
@@ -171,13 +171,13 @@ Since $C_{q_1}(\ket{\tau})=C_{q_2}(\ket{\tau})$ for every quantum state $\ket{\t
 \label{eq:1}
 \rho_1=(I\otimes C_{q_1}) \ket{\beta^{2n}}=(I\otimes C_{q_2}) \ket{\beta^{2n}}=\rho_2.
 \end{equation}
-And of course the bell measure circuit $B_q$ is the same for both $Qi\mathcal{O}(C_{q_1})$ and $Qi\mathcal{O}(C_{q_2}).$ So the only thing we need to show is that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2)$ are computationally indistinguishable against any polynomial-time quantum adversary. In order to prove that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2)$ we have to prove the following two properties;
+And of course the Bell measurement circuit $B_q$ is the same for both $Qi\mathcal{O}(C_{q_1})$ and $Qi\mathcal{O}(C_{q_2}).$ So the only thing we need to show is that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2)$ are computationally indistinguishable against any polynomial-time quantum adversary. In order to prove that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2)$ we have to prove the following two properties;
 
 \begin{enumerate}
-\item[1)] $C_1$ and $C_2$ are equivalent circuits, i.e. they compute the same functionality.
+\item[1)] $C_1$ and $C_2$ are equivalent circuits, \emph{i.e.}, they compute the same functionality.
 \item[2)]  $|C_1|=|C_2|.$
 \end{enumerate}
-Then using the $i\mathcal{O}$ definition we can conclude that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2).$ Note $C_1$ computes the update function $F_{C_{q_1}}$ and $C_2$ computes the update function $F_{C_{q_2}}.$ From Theorem \ref{sec:Clifford Functions} we have $F_{C_{q_1}}=F_{C_{q_2}},$ therefore, $C_1$ and $C_2$ must be equivalent circuits. Moreover if we use the $i\mathcal{O}$ defined in appendix \ref{sec:appendix}, then we are guaranteed to have $|C_1|=|C_2|.$ Therefore we have $i\mathcal{O}(C_1)\sim^c\mathcal{O}(C_2)$ and this completes the proof. But what if we are using any other quantum secure $i\mathcal{O},$ then it might be the classical circuit $C_1$ and $C_2$ are of different sizes, even if  $|C_{q_1}|=|C_{q_2}|.$  But this is not a problem, suppose we want to obfuscate a quantum circuit $C_q.$ The classical circuit $C$ is constructed by going through each gate in $C_{q}.$ Some gates are more costly than others (for e.g $\cnot$ vs $\zgate,$ see above or section \ref{update function}). Note that we can obtain an upper bound on all the classical circuits by replacing each gate in $C_q$ with the most costly gate and then computing the classical circuit for the resulting quantum gate. Now suppose $m$ is the upper bound on the size of classical circuits, then for any circuit $C_q,$ we first calculate the circuit $C$ that computes $F_{C_q}$ and then pads $C$ with $m-|C|$ identity gates. This will ensure that if $|C_{q_1}|=|C_{q_2}|,$ then $|C_1|=|C_2|.$
+Then using the $i\mathcal{O}$ definition we can conclude that $i\mathcal{O}(C_1)\sim^ci\mathcal{O}(C_2).$ Note $C_1$ computes the update function $F_{C_{q_1}}$ and $C_2$ computes the update function $F_{C_{q_2}}.$ From Theorem \ref{sec:Clifford Functions} we have $F_{C_{q_1}}=F_{C_{q_2}},$ therefore, $C_1$ and $C_2$ must be equivalent circuits. Moreover if we use the $i\mathcal{O}$ defined in \Cref{sec: iO-clifford-functions}, then we are guaranteed to have $|C_1|=|C_2|.$ Therefore we have $i\mathcal{O}(C_1)\sim^c\mathcal{O}(C_2)$ and this completes the proof. But what if we are using any other quantum secure $i\mathcal{O},$ then it might be the classical circuit $C_1$ and $C_2$ are of different sizes, even if  $|C_{q_1}|=|C_{q_2}|.$  But this is not a problem, suppose we want to obfuscate a quantum circuit $C_q$. The classical circuit $C$ is constructed by going through each gate in $C_{q}.$ Some gates are more costly than others (for \emph{e.g.}, $\cnot$ vs. $\zgate,$ see above or section \ref{update function}). Note that we can obtain an upper bound on all the classical circuits by replacing each gate in $C_q$ with the most costly gate and then computing the classical circuit for the resulting quantum gate. Now suppose $m$ is the upper bound on the size of classical circuits, then for any circuit $C_q,$ we first calculate the circuit $C$ that computes $F_{C_q}$ and then pads $C$ with $m-|C|$ identity gates. This will ensure that if $|C_{q_1}|=|C_{q_2}|,$ then $|C_1|=|C_2|.$
 \end{itemize}
 
 
@@ -191,7 +191,7 @@ Let $C_{q_1}$ and $C_{q_2}$ be two equivalent $n$-qubit Clifford circuits and  $
 \label{fun:assumption1}
 F_{C_{q_1}}(a_1,b_1,\ldots,a_n,b_n)\neq F_{C_{q_2}}(a_1,b_1,\ldots,a_n,b_n)
 \end{equation}
-Let $C_1$ and $C_2$ be circuits that compute $F_{C_{q_1}}$ and $F_{C_{q_2}}$ respectively, then it follows from the assumption \ref{fun:assumption1} that
+Let $C_1$ and $C_2$ be circuits that compute $F_{C_{q_1}}$ and $F_{C_{q_2}}$ respectively, then it follows from \Cref{fun:assumption1} that
 \begin{equation}
 \label{fun:assumption2}
 C_1(a_1,b_1,\ldots,a_n,b_n)\neq C_2(a_1,b_1,\ldots,a_n,b_n)
@@ -202,15 +202,14 @@ C_1(a_1,b_1,\ldots,a_n,b_n)\neq C_2(a_1,b_1,\ldots,a_n,b_n)
 %\left(\rho ,\left(B_q, i\mathcal{O}(C_1})\right)\right)= Qi\mathcal{O}(C_2}) \mbox{ and } \left(\rho ,\left(B_q, i\mathcal{O}(C_{F_{C_{q_2}}})\right)\right)= Qi\mathcal{O}(C_{q_2}).
 %\end{equation*}
 
-Suppose we evaluated circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using construction based on gate teleportaton (section \ref{sec:Clifford-iO-teleportaion}). Then in the step 3 of the 
- algorithm 4 (section \ref{Eval:Clifford-teleportation}) we are left with subsystems %$\rho_{AB}=\rho\otimes \ket \psi$ (see algorithm 3). Therefore, the classical output bits we obtain after performing the Bell measurement in algorithm 3 are independent of the circuits $C_{q_1}$ and $C_{q_2}$). Suppose for both circuits we obtain the same classical outputs $a_1b_1,\ldots, a_nb_n.$ From algorithm 3 we have
+Suppose we evaluated circuits $C_{q_1}$ and $C_{q_2}$ on some state $\ket \psi$ using construction based on gate teleportaton (section \ref{sec:Clifford-iO-teleportaion}). Then in the step 3  of \Cref{Eval:Clifford-teleportation}, we are left with subsystems %$\rho_{AB}=\rho\otimes \ket \psi$ (see algorithm 3). Therefore, the classical output bits we obtain after performing the Bell measurement in algorithm 3 are independent of the circuits $C_{q_1}$ and $C_{q_2}$). Suppose for both circuits we obtain the same classical outputs $a_1b_1,\ldots, a_nb_n.$ From algorithm 3 we have
 
  \begin{equation}
   \label{eq:2}
 C_{q_1} (\xgate^{\otimes_{i=1}^{n} b_{i}^\prime} \cdot \zgate^{\otimes_{i=1}^{n}a_{i}^\prime})\ket{\psi} \;\mbox{ and }\;
 C_{q_2} (\xgate^{\otimes_{i=1}^{n} \beta_{i}^\prime} \cdot \zgate^{\otimes_{i=1}^{n}\alpha_{i}^\prime})\ket{\psi}
 \end{equation}
-where $a_1^\prime b_1^\prime,\ldots, a_n^\prime b_n^\prime$ and $\alpha_1^\prime \beta_1^\prime,\ldots, \alpha_n^\prime \beta_n^\prime$ are random bits obtained after Bell measurement (algorithm 4, step 2, section \ref{sec:Clifford-iO-teleportaion}).   And further assume that the classical output of the Bell measurement for both circuits is the string  $s=a_1,b_1,\ldots,a_n,b_n,$ i.e  $s=a_1b_1,\ldots, a_nb_n$ and recall that $C_1(s)\neq C_2(s)$ (relation \ref{fun:assumption2}). Let 
+where $a_1^\prime b_1^\prime,\ldots, a_n^\prime b_n^\prime$ and $\alpha_1^\prime \beta_1^\prime,\ldots, \alpha_n^\prime \beta_n^\prime$ are random bits obtained after Bell measurement (algorithm 4, step 2, section \ref{sec:Clifford-iO-teleportaion}).   And further assume that the classical output of the Bell measurement for both circuits is the string  $s=a_1,b_1,\ldots,a_n,b_n,$ i.e  $s=a_1b_1,\ldots, a_nb_n$ and recall that $C_1(s)\neq C_2(s)$ (\Cref{fun:assumption2}). Let
  \begin{equation}
  \label{eq:3}
 C_1(s)=(a^\prime_1,b^\prime_1,\ldots, a^\prime_n,b^\prime_n)\neq(d_1^\prime,e_1^\prime,\ldots, d_n^\prime,e^\prime_n)=C_2(s)
@@ -218,26 +217,26 @@ C_1(s)=(a^\prime_1,b^\prime_1,\ldots, a^\prime_n,b^\prime_n)\neq(d_1^\prime,e_1^
 
 
 
-Since, $C_{q_1}$ and $C_{q_2}$ are equivalent circuits. The relationships in equation \ref{eq:2} are also equivalent, i.e.
+Since, $C_{q_1}$ and $C_{q_2}$ are equivalent circuits,  the relationships in \Cref{eq:2} are also equivalent, \emph{i.e.},
  \begin{equation}
   \label{eq:4}
 C_{q_1} (\xgate^{\otimes_{i=1}^{n} b_{i}} \cdot \zgate^{\otimes_{i=1}^{n}a_{i}})\ket{\psi}=C_{q_2} (\xgate^{\otimes_{i=1}^{n} b_{i}} \cdot \zgate^{\otimes_{i=1}^{n}a_{i}})\ket{\psi}
 \end{equation}
 
-We can rewrite the equation \ref{eq:4} by using update functions from \ref{eq:3}
+We can rewrite \Cref{eq:4} by using update functions from \Cref{eq:3}
  \begin{equation}
   \label{eq:5}
 (\zgate^{\otimes_{i=1}^{n} a_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} b_{i}^\prime})C_{q_1}(\ket{\psi})=(\zgate^{\otimes_{i=1}^{n} d_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} e_{i}^\prime})C_{q_2}(\ket{\psi})
 \end{equation}
 
-Since $C_{q_1}(\ket{\psi})=C_{q_2}(\ket{\psi})$ we can substitute $C_{q_1}$ for $C_{q_2}$ in equation \ref{eq:5}
+Since $C_{q_1}(\ket{\psi})=C_{q_2}(\ket{\psi})$ we can substitute $C_{q_1}$ for $C_{q_2}$ in  \Cref{eq:5}
 
 \begin{equation}
   \label{eq:6}
 (\zgate^{\otimes_{i=1}^{n} a_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} b_{i}^\prime})C_{q_1}(\ket{\psi})=(\zgate^{\otimes_{i=1}^{n} d_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} e_{i}^\prime})C_{q_1}(\ket{\psi})
 \end{equation}
 
-It follows from equation \ref{eq:6} that
+It follows from \Cref{eq:6} that
 \begin{equation}
   \label{eq:7}
 (\zgate^{\otimes_{i=1}^{n} a_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} b_{i}^\prime})=(\zgate^{\otimes_{i=1}^{n} d_{i}^\prime} \cdot \xgate^{\otimes_{i=1}^{n} e_{i}^\prime})
